fix: styling issues where app-navigation cut-off the content behind it

--- a/src/components/app-core/variables.css
+++ b/src/components/app-core/variables.css
@@ -46,7 +46,7 @@
     --header-height-mobile: 50px;
     --header-height-desktop: 65px;
     --navigation-height-mobile: 50px;
-    --navigation-height-desktop: 55px;
+    --navigation-height-desktop: 120px;
     --column-width-mobile: 310px;
     --column-width-desktop: 360px;
 }
